<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        android:id="@+id/marcoSuperior"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@drawable/marco_registrarse"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <TextView
            android:id="@+id/textoregistrarse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/escaneo_medi"
            android:textSize="25sp"
            android:textColor="@android:color/white"
            android:layout_marginTop="20.3dp"
            android:layout_marginStart="50dp"
            android:textStyle="bold"/>
        <ImageView
            android:id="@+id/hamburguesa"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="23dp"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toStartOf="@id/marcoSuperior"
            app:layout_constraintTop_toTopOf="@id/marcoSuperior"
            app:layout_constraintEnd_toEndOf="@id/marcoSuperior"
            android:src="@drawable/ic_menu_icon" />
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enfermera"
            android:layout_width="430dp"
            android:layout_height= "40dp"
            android:layout_marginTop="73dp"
            android:layout_marginStart="-10dp"
            android:hint="Pepe Gonzalez"
            app:layout_constraintStart_toStartOf="@id/marcoSuperior"
            app:layout_constraintTop_toTopOf="@id/marcoSuperior"
            app:layout_constraintEnd_toEndOf="@id/marcoSuperior"
            android:background="@drawable/formato_enfermera"
            android:drawableStart="@drawable/enfermera" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@color/md_grey_200"
        android:layout_marginTop="143dp"
        app:layout_constraintTop_toTopOf="@id/marcoSuperior"
        app:layout_constraintEnd_toEndOf="@id/marcoSuperior">

    <!-- Título del cuadro -->
    <TextView
        android:id="@+id/tituloMedicamento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Información del Medicamento"
        android:textSize="38sp"
        android:textColor="@color/md_blue_700"
        android:textStyle="bold"
        android:layout_marginBottom="8dp" />

    <!-- Cuadro con la información -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/borde_cuadro"
        android:padding="12dp">


        <TextView
            android:id="@+id/nombreMedicamento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="26sp"
            android:textColor="@color/black" />

    </LinearLayout>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttoncancelar"
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:text="@string/guardar"
        android:textColor="@color/white"
        app:iconGravity="textStart"
        android:layout_marginBottom="-60dp"
        android:layout_marginLeft="25dp"
        android:background="@drawable/boton3"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"

        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonCamera"
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:text="@string/atras"
        android:textColor="@color/white"
        android:layout_marginLeft="15dp"
        android:layout_marginBottom="-60dp"
        app:iconGravity="textStart"
        android:background="@drawable/boton4"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintLeft_toRightOf="@id/buttoncancelar"/>

    <LinearLayout
        android:id="@+id/navigationBar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="#FFFFFF"
        android:orientation="horizontal"
        android:elevation="8dp"
        android:layout_alignParentBottom="true"
        app:layout_constraintBottom_toBottomOf="parent"
        android:weightSum="2"
        tools:ignore="MissingConstraints">

        <!-- Contenedor del Botón de Inicio -->
        <LinearLayout
            android:id="@+id/btnHomeContainer"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:id="@+id/btnHome"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:contentDescription="Home"
                android:src="@drawable/ic_home"
                app:tint="#4A90E2" />
        </LinearLayout>

        <!-- Separador entre los íconos -->
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#DDDDDD" />

        <!-- Contenedor del Botón de Perfil -->
        <LinearLayout
            android:id="@+id/btnProfileContainer"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:id="@+id/btnProfile"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_profile"
                android:contentDescription="Profile"
                app:tint="#4A90E2" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>